adding mssql repository

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
-PORT=
+PORT=3000
 
-DB_NAME=
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
+DB_MYSQL_NAME=
+DB_MYSQL_HOST=
+DB_MYSQL_PORT=
+DB_MYSQL_USER=
+DB_MYSQL_PASSWORD=
+
+DB_MSSQL_NAME=
+DB_MSSQL_HOST=
+DB_MSSQL_PORT=
+DB_MSSQL_USER=
+DB_MSSQL_PASSWORD=
