--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/mssql": "^8.1.1",
     "@types/mysql2": "github:types/mysql2",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
@@ -28,6 +29,7 @@
     "awilix-express": "^8.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mssql": "^9.0.1",
     "mysql2": "^2.3.3"
   }
 }
