--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "clean": "rm -rf dist",
     "dev": "nodemon src/server.ts --exec ts-node",
     "lint": "eslint src/*",
-    "lintfix": "eslint src/* --fix"
+    "lintfix": "eslint src/* --fix",
+    "test": "mocha -r ts-node/register src/test/**/*.spec.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/mocha": "^10.0.1",
     "@types/mysql2": "github:types/mysql2",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.27.0",
+    "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
