--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "clean": "rm -rf dist",
     "dev": "nodemon src/server.ts --exec ts-node",
     "lint": "eslint src/*",
