--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "@types/mssql": "^8.1.1",
+    "@types/express-jwt": "^7.4.2",
     "@types/mocha": "^10.0.1",
+    "@types/mssql": "^8.1.1",
     "@types/mysql2": "github:types/mysql2",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
@@ -32,6 +33,7 @@
     "awilix-express": "^8.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
     "mssql": "^9.0.1",
     "mysql2": "^2.3.3"
   }
