--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/express-jwt": "^7.4.2",
     "@types/mocha": "^10.0.1",
@@ -31,6 +32,7 @@
   "dependencies": {
     "awilix": "^8.0.0",
     "awilix-express": "^8.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
